# topology

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CODEOWNERS  README.md  REUSE.toml
.github/workflows/: ci.yml  reuse_check.yml
.reuse/: dep5
src/: CMakeLists.txt  likely.h  list.h  random.c  random.h  topology.c  xxtea.c  xxtea.h
src/compiler/: compiler.cpp  rootsimcc.c
src/compiler/plugin/: incremental.cpp  wrap.cpp  wrap.h
src/include/ROOT-Sim/: topology.h
src/lib/argparse/: argparse.c  argparse.h  init.c  init.h  model_main.c
src/lib/random-bak/: random.c  random.h  xoroshiro.h  xxtea.c  xxtea.h
src/lib/topology/: topology.c
src/model_lib/: argparse.c  argparse.h  init.c  init.h
src/plugin/: incremental.cpp  wrap.cpp  wrap.h
test/: CMakeLists.txt  compiler.c  generic.c  graphs.c  networks.c  planar.c  rings.c  topology.c
test/tests/lib/: random.h  topology.c  topology.h
